samples/_failures_safe/1761356725_3f347e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6bb4f8f.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
